# pytest-selenium-config

./: .gitignore  README.md  conftest.py  pyproject.toml  tox.ini
