[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "example-project"
version = "1.0"
requires-python = ">= 3.14"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "pytest",
    "pytest-html",
    "selenium",
    "tox",
]

[dependency-groups]
lint = [
    "ruff",
    "validate-pyproject[all]",
]

[tool.setuptools]
packages = []

[tool.pytest]
addopts = ["-s", "-v", "--html=report/report.html"]

[tool.ruff]
line-length = 120
respect-gitignore = true
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "COM812", "D", "EM101", "EM102", "FBT",
    "PLR", "S101", "TRY003", "TRY400"
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/conftest.py" = ["ARG001"]

[tool.ruff.format]
docstring-code-line-length = 120
docstring-code-format = true
